openmm-sys/src/lib.rs

extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setDefaultPressure(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        pressure: f64,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getDefaultSurfaceTension(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setDefaultSurfaceTension(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        surfaceTension: f64,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getFrequency(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setFrequency(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        freq: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getDefaultTemperature(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setDefaultTemperature(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        temp: f64,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getXYMode(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> OpenMM_MonteCarloMembraneBarostat_XYMode;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setXYMode(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        mode: OpenMM_MonteCarloMembraneBarostat_XYMode,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getZMode(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> OpenMM_MonteCarloMembraneBarostat_ZMode;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setZMode(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        mode: OpenMM_MonteCarloMembraneBarostat_ZMode,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_getRandomNumberSeed(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_setRandomNumberSeed(
        target: *mut OpenMM_MonteCarloMembraneBarostat,
        seed: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloMembraneBarostat_usesPeriodicBoundaryConditions(
        target: *const OpenMM_MonteCarloMembraneBarostat,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_create(
        defaultPressure: *const OpenMM_Vec3,
        defaultTemperature: f64,
        scaleX: OpenMM_Boolean,
        scaleY: OpenMM_Boolean,
        scaleZ: OpenMM_Boolean,
        frequency: ::std::os::raw::c_int,
    ) -> *mut OpenMM_MonteCarloAnisotropicBarostat;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_destroy(
        target: *mut OpenMM_MonteCarloAnisotropicBarostat,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_PressureX() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_PressureY() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_PressureZ() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_Temperature() -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getDefaultPressure(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> *const OpenMM_Vec3;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_setDefaultPressure(
        target: *mut OpenMM_MonteCarloAnisotropicBarostat,
        pressure: *const OpenMM_Vec3,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getScaleX(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getScaleY(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getScaleZ(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getFrequency(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_setFrequency(
        target: *mut OpenMM_MonteCarloAnisotropicBarostat,
        freq: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getDefaultTemperature(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_setDefaultTemperature(
        target: *mut OpenMM_MonteCarloAnisotropicBarostat,
        temp: f64,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_getRandomNumberSeed(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_setRandomNumberSeed(
        target: *mut OpenMM_MonteCarloAnisotropicBarostat,
        seed: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn OpenMM_MonteCarloAnisotropicBarostat_usesPeriodicBoundaryConditions(
        target: *const OpenMM_MonteCarloAnisotropicBarostat,
    ) -> OpenMM_Boolean;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_create(
        energy: *const ::std::os::raw::c_char,
    ) -> *mut OpenMM_CustomCVForce;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_destroy(target: *mut OpenMM_CustomCVForce);
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getNumCollectiveVariables(
        target: *const OpenMM_CustomCVForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getNumGlobalParameters(
        target: *const OpenMM_CustomCVForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getNumEnergyParameterDerivatives(
        target: *const OpenMM_CustomCVForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getNumTabulatedFunctions(
        target: *const OpenMM_CustomCVForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getEnergyFunction(
        target: *const OpenMM_CustomCVForce,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_setEnergyFunction(
        target: *mut OpenMM_CustomCVForce,
        energy: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomCVForce_addCollectiveVariable(
        target: *mut OpenMM_CustomCVForce,
        name: *const ::std::os::raw::c_char,
        variable: *mut OpenMM_Force,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getCollectiveVariableName(
        target: *const OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getCollectiveVariable(
        target: *mut OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> *mut OpenMM_Force;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_addGlobalParameter(
        target: *mut OpenMM_CustomCVForce,
        name: *const ::std::os::raw::c_char,
        defaultValue: f64,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getGlobalParameterName(
        target: *const OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_setGlobalParameterName(
        target: *mut OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getGlobalParameterDefaultValue(
        target: *const OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> f64;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_setGlobalParameterDefaultValue(
        target: *mut OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
        defaultValue: f64,
    );
}
extern "C" {
    pub fn OpenMM_CustomCVForce_addEnergyParameterDerivative(
        target: *mut OpenMM_CustomCVForce,
        name: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getEnergyParameterDerivativeName(
        target: *const OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_addTabulatedFunction(
        target: *mut OpenMM_CustomCVForce,
        name: *const ::std::os::raw::c_char,
        function: *mut OpenMM_TabulatedFunction,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getTabulatedFunction(
        target: *mut OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> *mut OpenMM_TabulatedFunction;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getTabulatedFunctionName(
        target: *const OpenMM_CustomCVForce,
        index: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getCollectiveVariableValues(
        target: *mut OpenMM_CustomCVForce,
        context: *mut OpenMM_Context,
        values: *mut OpenMM_DoubleArray,
    );
}
extern "C" {
    pub fn OpenMM_CustomCVForce_getInnerContext(
        target: *mut OpenMM_CustomCVForce,
        context: *mut OpenMM_Context,
    ) -> *mut OpenMM_Context;
}
extern "C" {
    pub fn OpenMM_CustomCVForce_updateParametersInContext(
        target: *mut OpenMM_CustomCVForce,
        context: *mut OpenMM_Context,
    );
}
extern "C" {
    pub fn OpenMM_CustomCVForce_usesPeriodicBoundaryConditions(
        target: *const OpenMM_CustomCVForce,
    ) -> OpenMM_Boolean;
}
pub const OpenMM_NonbondedForce_NonbondedMethod_OpenMM_NonbondedForce_NoCutoff:
    OpenMM_NonbondedForce_NonbondedMethod = 0;
pub const OpenMM_NonbondedForce_NonbondedMethod_OpenMM_NonbondedForce_CutoffNonPeriodic:
    OpenMM_NonbondedForce_NonbondedMethod = 1;
pub const OpenMM_NonbondedForce_NonbondedMethod_OpenMM_NonbondedForce_CutoffPeriodic:
    OpenMM_NonbondedForce_NonbondedMethod = 2;
pub const OpenMM_NonbondedForce_NonbondedMethod_OpenMM_NonbondedForce_Ewald:
    OpenMM_NonbondedForce_NonbondedMethod = 3;
pub const OpenMM_NonbondedForce_NonbondedMethod_OpenMM_NonbondedForce_PME:
    OpenMM_NonbondedForce_NonbondedMethod = 4;
pub const OpenMM_NonbondedForce_NonbondedMethod_OpenMM_NonbondedForce_LJPME:
    OpenMM_NonbondedForce_NonbondedMethod = 5;
pub type OpenMM_NonbondedForce_NonbondedMethod = u32;
extern "C" {
    pub fn OpenMM_NonbondedForce_create() -> *mut OpenMM_NonbondedForce;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_destroy(target: *mut OpenMM_NonbondedForce);
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getNumParticles(
        target: *const OpenMM_NonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getNumExceptions(
        target: *const OpenMM_NonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getNumGlobalParameters(
        target: *const OpenMM_NonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getNumParticleParameterOffsets(
        target: *const OpenMM_NonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getNumExceptionParameterOffsets(
        target: *const OpenMM_NonbondedForce,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_getNonbondedMethod(
        target: *const OpenMM_NonbondedForce,
    ) -> OpenMM_NonbondedForce_NonbondedMethod;
}
extern "C" {
    pub fn OpenMM_NonbondedForce_setNonbondedMethod(
        target: *mut OpenMM_NonbondedForce,
        method: OpenMM_NonbondedForce_NonbondedMethod,
    );
}
